# embedded-multitasker

./: CMakeLists.txt  CMakePresets.json  MCXN947.mex  README.md  arm-toolchain.cmake
board/: CMakeLists.txt  clock_config.c  clock_config.c.bak  clock_config.h  clock_config.h.bak  peripherals.c  peripherals.c.bak  peripherals.h  peripherals.h.bak  pin_mux.c  pin_mux.c.bak  pin_mux.h  pin_mux.h.bak
include/device/: CMakeLists.txt  system_MCXN947_cm33_core0.c
include/drivers/: CMakeLists.txt
include/freertos_kernel/: CMakeLists.txt
src/: CMakeLists.txt  main.c  my_interrupts.c  oled.c
src/include/: main.h  my_interrupts.h  oled.h
src/startup/: CMakeLists.txt  startup_MCXN947.c  startup_MCXN947_linker.ld
